<resources>
    <string name="app_name">BloodDonation</string>
    <string name="rights">All rights reserved for Ipda3tech</string>
    <string name="skip">تخطى</string>

    <!-- This is how to comment on xml file :D -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">الجوال</string>
    <string name="password">كلمة المرور</string>
    <string name="forget_password">هل نسيت كلمة المرور</string>
    <string name="login">دخول</string>
    <string name="forgot_password">نسيت كلمة المرور</string>
    <string name="send">ارسال</string>
    <string name="change_password_code">كود تغيير كلمة المرور</string>
    <string name="verif_code">كود التحقق</string>
    <string name="new_password">كلمة المرور الجديده</string>
    <string name="confirm_new_password">تأكيد كلمة المرور الجديدة</string>
    <string name="change_password">تغيير كلمة المرور</string>
    <string name="create_new_account">انشاء حساب جديد</string>
    <string name="name">الإسم</string>
    <string name="Email">البريد الإلكترونى</string>
    <string name="day_of_date">تاريخ الميلاد</string>

</resources>
