<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".ui.fragment.ForgetPasswordFragment">

    <ImageView
        android:id="@+id/image_view_logo"
        android:layout_width="@dimen/dim_20xl"
        android:layout_height="@dimen/dim_20xl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dim_7xl"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/Tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_view_logo"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dim_l"
        android:layout_marginBottom="@dimen/dim_l"
        android:text="@string/change_password_code"
        android:textSize="@dimen/txt_size_l" />

    <EditText
        android:id="@+id/Et_Verif_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Tv_forget_password"
        android:layout_margin="@dimen/dim_l"
        android:hint="@string/verif_code"
        android:padding="@dimen/dim_l" />

    <EditText
        android:id="@+id/Et_New_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Et_Verif_code"
        android:layout_margin="@dimen/dim_l"
        android:hint="@string/new_password"
        android:padding="@dimen/dim_l"
        />

    <EditText
        android:id="@+id/Et_Confirm_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Et_New_Password"
        android:layout_margin="@dimen/dim_l"
        android:hint="@string/confirm_new_password"
        android:padding="@dimen/dim_l" />

    <Button
        android:id="@+id/Btn_Send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Et_Confirm_Password"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/dim_l"
        android:background="@color/green"
        android:text="@string/change_password"
        android:textSize="@dimen/txt_size_l" />


</RelativeLayout>