<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ForgetPasswordFragment"
    android:background="@drawable/splash">
    <ImageView
        android:id="@+id/image_view_logo"
        android:layout_width="@dimen/dim_20xl"
        android:layout_height="@dimen/dim_20xl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dim_7xl"
        android:src="@drawable/logo" />
    <TextView
        android:id="@+id/Tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_below="@id/image_view_logo"
        android:layout_centerInParent="true"
        android:textSize="@dimen/txt_size_l"
        android:layout_marginTop="@dimen/dim_l"
        android:layout_marginBottom="@dimen/dim_l"/>
    <EditText
        android:id="@+id/Et_Phone_Number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:layout_below="@id/Tv_forget_password"
        android:padding="@dimen/dim_l"
        android:layout_margin="@dimen/dim_l"/>
<Button
    android:id="@+id/Btn_Send"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:textSize="@dimen/txt_size_l"
    android:layout_margin="@dimen/dim_l"
    android:text="@string/send"
    android:layout_below="@id/Et_Phone_Number"
    android:background="@color/green"/>


</RelativeLayout>